--- a/css/index.css
+++ b/css/index.css
@@ -68,7 +68,34 @@ p {
 
 .container {
     width: 800px;
+    height: 100%;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+header {
+    width: 100%;
+    padding: 18px 0;
+    display: flex;
+}
+header nav {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    
+}
+
+header nav a {
+    text-decoration: none;
+    font-size: 14px;
+    color: black;
+}
+header nav a:hover {
+    text-decoration: underline;
+    font-weight: bolder;
 }
 
 .top-content {
@@ -77,12 +104,13 @@ p {
     justify-content: space-evenly;
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
+    padding: 22px 0;
 }
 
 .top-content .text-container {
     width: 48%;
     padding: 0 1%;
-    padding-bottom: 20px;  
+    padding-top: 20px;  
 }
 
 .middle-content {
@@ -104,12 +132,42 @@ p {
 .middle-content .boxes .box {
     width: 12.5%;
     height: 100px;
-    background: black;
     margin: 20px 2.5%;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.box.teal {
+    background: teal;
+}
+.box.gold {
+    background: gold;
+}
+.box.cadetblue {
+    background: cadetblue;
+}
+.box.coral {
+    background: coral;
+}
+.box.crimson {
+    background: crimson;
+}
+.box.forestgreen {
+    background: forestgreen;
+}
+.box.darkorchid {
+    background: darkorchid;
+}
+.box.hotpink {
+    background: hotpink;
+}
+.box.indigo {
+    background: indigo;
+}
+.box.dodgerblue {
+    background: dodgerblue;
 }
 
 .bottom-content {
