--- a/css/about.css
+++ b/css/about.css
@@ -54,3 +54,13 @@
     margin-top: -20px;
     padding-bottom: 20px;
 }
+
+@media screen and (max-width: 415px) {
+    .middle-content .boxes {
+        width: 40%;
+    }
+
+    .middle-content .boxes img {
+        width: 100%;
+    }
+}
