--- a/css/index.css
+++ b/css/index.css
@@ -68,7 +68,6 @@ p {
 
 .container {
     width: 800px;
-    height: 100%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -116,6 +115,10 @@ header #logo_link:hover {
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
     padding: 22px 0;
+}
+
+.top-content .hero_img {
+	width: 100%;
 }
 
 .top-content .text-container {
